fix: header z-index change to 10 from 3

--- a/src/layout/components/header/header.module.css
+++ b/src/layout/components/header/header.module.css
@@ -1,7 +1,7 @@
 .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 3;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 10;
 }
